src/main/gen/com/bobdotcom/nasal/parser/NasalParser.java
// This is a generated file. Not intended for manual editing.
package com.bobdotcom.nasal.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.bobdotcom.nasal.psi.NasalTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class NasalParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return nasalFile(b, l + 1);
  }

  /* ********************************************************** */
  // expression4 ASSIGN expression0
  public static boolean assign_var(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_var")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_VAR, "<assign var>");
    r = expression4(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && expression0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expression0?
  public static boolean expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression")) return false;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION, "<expression>");
    expression0(b, l + 1);
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // (
  // //    (expression1 (SEMI|COMMA))* expression1
  //     expression1
  // )
  public static boolean expression0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_0, "<expression 0>");
    r = expression1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (
  // //    expression2 (ELLIPSIS expression0?)*
  //     expression2
  // )
  public static boolean expression1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_1, "<expression 1>");
    r = expression2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expression11 (OR expression11)*
  public static boolean expression10(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression10")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_10, "<expression 10>");
    r = expression11(b, l + 1);
    r = r && expression10_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OR expression11)*
  private static boolean expression10_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression10_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression10_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression10_1", c)) break;
    }
    return true;
  }

  // OR expression11
  private static boolean expression10_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression10_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OR);
    r = r && expression11(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expression12 (AND expression12)*
  public static boolean expression11(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression11")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_11, "<expression 11>");
    r = expression12(b, l + 1);
    r = r && expression11_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AND expression12)*
  private static boolean expression11_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression11_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression11_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression11_1", c)) break;
    }
    return true;
  }

  // AND expression12
  private static boolean expression11_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression11_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && expression12(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expression13 ((EQ|NEQ) expression13)*
  public static boolean expression12(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression12")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_12, "<expression 12>");
    r = expression13(b, l + 1);
    r = r && expression12_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ((EQ|NEQ) expression13)*
  private static boolean expression12_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression12_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression12_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression12_1", c)) break;
    }
    return true;
  }

  // (EQ|NEQ) expression13
  private static boolean expression12_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression12_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression12_1_0_0(b, l + 1);
    r = r && expression13(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // EQ|NEQ
  private static boolean expression12_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression12_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, NEQ);
    return r;
  }

  /* ********************************************************** */
  // expression14 ((LT|LTE|GT|GTE) expression14)*
  public static boolean expression13(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression13")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_13, "<expression 13>");
    r = expression14(b, l + 1);
    r = r && expression13_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ((LT|LTE|GT|GTE) expression14)*
  private static boolean expression13_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression13_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression13_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression13_1", c)) break;
    }
    return true;
  }

  // (LT|LTE|GT|GTE) expression14
  private static boolean expression13_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression13_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression13_1_0_0(b, l + 1);
    r = r && expression14(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LT|LTE|GT|GTE
  private static boolean expression13_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression13_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, LTE);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, GTE);
    return r;
  }

  /* ********************************************************** */
  // expression15 ((PLUS|MINUS|CAT) expression15)*
  public static boolean expression14(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression14")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_14, "<expression 14>");
    r = expression15(b, l + 1);
    r = r && expression14_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ((PLUS|MINUS|CAT) expression15)*
  private static boolean expression14_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression14_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression14_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression14_1", c)) break;
    }
    return true;
  }

  // (PLUS|MINUS|CAT) expression15
  private static boolean expression14_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression14_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression14_1_0_0(b, l + 1);
    r = r && expression15(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // PLUS|MINUS|CAT
  private static boolean expression14_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression14_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, CAT);
    return r;
  }

  /* ********************************************************** */
  // expression16 ((MUL|DIV) expression16)*
  public static boolean expression15(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression15")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_15, "<expression 15>");
    r = expression16(b, l + 1);
    r = r && expression15_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ((MUL|DIV) expression16)*
  private static boolean expression15_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression15_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression15_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression15_1", c)) break;
    }
    return true;
  }

  // (MUL|DIV) expression16
  private static boolean expression15_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression15_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression15_1_0_0(b, l + 1);
    r = r && expression16(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // MUL|DIV
  private static boolean expression15_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression15_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, MUL);
    if (!r) r = consumeToken(b, DIV);
    return r;
  }

  /* ********************************************************** */
  // (MINUS|NEG|NOT|CAT|BIT_NEG)* expression17
  public static boolean expression16(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression16")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_16, "<expression 16>");
    r = expression16_0(b, l + 1);
    r = r && expression17(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (MINUS|NEG|NOT|CAT|BIT_NEG)*
  private static boolean expression16_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression16_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression16_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression16_0", c)) break;
    }
    return true;
  }

  // MINUS|NEG|NOT|CAT|BIT_NEG
  private static boolean expression16_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression16_0_0")) return false;
    boolean r;
    r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, NEG);
    if (!r) r = consumeToken(b, NOT);
    if (!r) r = consumeToken(b, CAT);
    if (!r) r = consumeToken(b, BIT_NEG);
    return r;
  }

  /* ********************************************************** */
  // expression_base (
  //         LPAR (expression0 COMMA)* expression0? RPAR |  // Function call
  //         LBRA (expression0 COMMA)* expression0? RBRA |  // Lookup
  //         (DOT|NULL_ACCESS) expression_base
  //         )*
  public static boolean expression17(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_17, "<expression 17>");
    r = expression_base(b, l + 1);
    r = r && expression17_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (
  //         LPAR (expression0 COMMA)* expression0? RPAR |  // Function call
  //         LBRA (expression0 COMMA)* expression0? RBRA |  // Lookup
  //         (DOT|NULL_ACCESS) expression_base
  //         )*
  private static boolean expression17_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression17_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression17_1", c)) break;
    }
    return true;
  }

  // LPAR (expression0 COMMA)* expression0? RPAR |  // Function call
  //         LBRA (expression0 COMMA)* expression0? RBRA |  // Lookup
  //         (DOT|NULL_ACCESS) expression_base
  private static boolean expression17_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression17_1_0_0(b, l + 1);
    if (!r) r = expression17_1_0_1(b, l + 1);
    if (!r) r = expression17_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LPAR (expression0 COMMA)* expression0? RPAR
  private static boolean expression17_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAR);
    r = r && expression17_1_0_0_1(b, l + 1);
    r = r && expression17_1_0_0_2(b, l + 1);
    r = r && consumeToken(b, RPAR);
    exit_section_(b, m, null, r);
    return r;
  }

  // (expression0 COMMA)*
  private static boolean expression17_1_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1_0_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression17_1_0_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression17_1_0_0_1", c)) break;
    }
    return true;
  }

  // expression0 COMMA
  private static boolean expression17_1_0_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1_0_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression0(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // expression0?
  private static boolean expression17_1_0_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1_0_0_2")) return false;
    expression0(b, l + 1);
    return true;
  }

  // LBRA (expression0 COMMA)* expression0? RBRA
  private static boolean expression17_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRA);
    r = r && expression17_1_0_1_1(b, l + 1);
    r = r && expression17_1_0_1_2(b, l + 1);
    r = r && consumeToken(b, RBRA);
    exit_section_(b, m, null, r);
    return r;
  }

  // (expression0 COMMA)*
  private static boolean expression17_1_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1_0_1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression17_1_0_1_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression17_1_0_1_1", c)) break;
    }
    return true;
  }

  // expression0 COMMA
  private static boolean expression17_1_0_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1_0_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression0(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // expression0?
  private static boolean expression17_1_0_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1_0_1_2")) return false;
    expression0(b, l + 1);
    return true;
  }

  // (DOT|NULL_ACCESS) expression_base
  private static boolean expression17_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression17_1_0_2_0(b, l + 1);
    r = r && expression_base(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DOT|NULL_ACCESS
  private static boolean expression17_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression17_1_0_2_0")) return false;
    boolean r;
    r = consumeToken(b, DOT);
    if (!r) r = consumeToken(b, NULL_ACCESS);
    return r;
  }

  /* ********************************************************** */
  // (RETURN|BREAK|CONTINUE)* expression3 |
  //     (RETURN|BREAK|CONTINUE)+
  public static boolean expression2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression2")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_2, "<expression 2>");
    r = expression2_0(b, l + 1);
    if (!r) r = expression2_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (RETURN|BREAK|CONTINUE)* expression3
  private static boolean expression2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression2_0_0(b, l + 1);
    r = r && expression3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (RETURN|BREAK|CONTINUE)*
  private static boolean expression2_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression2_0_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression2_0_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression2_0_0", c)) break;
    }
    return true;
  }

  // RETURN|BREAK|CONTINUE
  private static boolean expression2_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression2_0_0_0")) return false;
    boolean r;
    r = consumeToken(b, RETURN);
    if (!r) r = consumeToken(b, BREAK);
    if (!r) r = consumeToken(b, CONTINUE);
    return r;
  }

  // (RETURN|BREAK|CONTINUE)+
  private static boolean expression2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression2_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression2_1_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!expression2_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression2_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // RETURN|BREAK|CONTINUE
  private static boolean expression2_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression2_1_0")) return false;
    boolean r;
    r = consumeToken(b, RETURN);
    if (!r) r = consumeToken(b, BREAK);
    if (!r) r = consumeToken(b, CONTINUE);
    return r;
  }

  /* ********************************************************** */
  // (expression4 ((ASSIGN)|PLUSEQ|MINUSEQ|MULEQ|DIVEQ|CATEQ|BIT_ANDEQ|BIT_OREQ|BIT_XOREQ))* expression4
  public static boolean expression3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression3")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_3, "<expression 3>");
    r = expression3_0(b, l + 1);
    r = r && expression4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (expression4 ((ASSIGN)|PLUSEQ|MINUSEQ|MULEQ|DIVEQ|CATEQ|BIT_ANDEQ|BIT_OREQ|BIT_XOREQ))*
  private static boolean expression3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression3_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression3_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression3_0", c)) break;
    }
    return true;
  }

  // expression4 ((ASSIGN)|PLUSEQ|MINUSEQ|MULEQ|DIVEQ|CATEQ|BIT_ANDEQ|BIT_OREQ|BIT_XOREQ)
  private static boolean expression3_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression3_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression4(b, l + 1);
    r = r && expression3_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (ASSIGN)|PLUSEQ|MINUSEQ|MULEQ|DIVEQ|CATEQ|BIT_ANDEQ|BIT_OREQ|BIT_XOREQ
  private static boolean expression3_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression3_0_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASSIGN);
    if (!r) r = consumeToken(b, PLUSEQ);
    if (!r) r = consumeToken(b, MINUSEQ);
    if (!r) r = consumeToken(b, MULEQ);
    if (!r) r = consumeToken(b, DIVEQ);
    if (!r) r = consumeToken(b, CATEQ);
    if (!r) r = consumeToken(b, BIT_ANDEQ);
    if (!r) r = consumeToken(b, BIT_OREQ);
    if (!r) r = consumeToken(b, BIT_XOREQ);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (expression5 (COLON|QUESTION))* expression5
  public static boolean expression4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression4")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_4, "<expression 4>");
    r = expression4_0(b, l + 1);
    r = r && expression5(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (expression5 (COLON|QUESTION))*
  private static boolean expression4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression4_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression4_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression4_0", c)) break;
    }
    return true;
  }

  // expression5 (COLON|QUESTION)
  private static boolean expression4_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression4_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression5(b, l + 1);
    r = r && expression4_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COLON|QUESTION
  private static boolean expression4_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression4_0_0_1")) return false;
    boolean r;
    r = consumeToken(b, COLON);
    if (!r) r = consumeToken(b, QUESTION);
    return r;
  }
